gccida/c3/true_regnum
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_regnum/src/jump.c:2888:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_regnum/src/jump.c:2890:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_regnum/src/obj/jump.o] Error 1
